--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^1.1.5
   mqtt_client: ^9.7.2
   material_design_icons_flutter: ^5.0.6996
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
